fix_z-index

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -7,7 +7,7 @@
   transition: all $time-cubic;
   transform: translate(-50%, 0) scale(0.9);
   background-color: $primary-background-color;
-  z-index: 2;
+  z-index: 2000;
   @media screen and (min-width: $tablet-general) {
     transform: translate(-50%, -50%) scale(0.9);
     top: 50%;
